policies/selinux-user-ephemeralcontainers.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-selinux-user-ephemeralcontainers
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods/ephemeralcontainers"]
  validations:
    - expression: >
        !has(object.spec.ephemeralContainers) ||
        object.spec.ephemeralContainers.all(ec,
          !has(ec.securityContext) ||
          !has(ec.securityContext.seLinuxOptions) ||
          !has(ec.securityContext.seLinuxOptions.user) ||
          ec.securityContext.seLinuxOptions.user == ""
        )
      message: >
        spec.ephemeralContainers[*].securityContext.seLinuxOptions.user must be undefined or an empty string ("").
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-ephemeralcontainers-namespace-optout-warn
spec:
  policyName: check-selinux-user-ephemeralcontainers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/selinux-user-ephemeralcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-ephemeralcontainers-namespace-optin-warn
spec:
  policyName: check-selinux-user-ephemeralcontainers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: selinux-user-ephemeralcontainers.validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-ephemeralcontainers-namespace-optout-audit
spec:
  policyName: check-selinux-user-ephemeralcontainers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/selinux-user-ephemeralcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-ephemeralcontainers-namespace-optin-audit
spec:
  policyName: check-selinux-user-ephemeralcontainers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: selinux-user-ephemeralcontainers.validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-ephemeralcontainers-namespace-optout-deny
spec:
  policyName: check-selinux-user-ephemeralcontainers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/selinux-user-ephemeralcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-ephemeralcontainers-namespace-optin-deny
spec:
  policyName: check-selinux-user-ephemeralcontainers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: selinux-user-ephemeralcontainers.validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["true"]
